<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_marginBottom="30dp"
            android:paddingBottom="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstLinepage3"
            android:textSize="50dp"
            android:gravity="center"/>


        <TextView
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondLinepage3"
            android:textSize="28dp"
            android:gravity="center"/>

        <ImageView
            android:layout_marginTop="110dp"
            android:id="@+id/imagePage1"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:src="@drawable/step2"
            android:layout_marginBottom="100dp"/>



    </LinearLayout>
    <TextView
        android:id="@+id/skip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:clickable="true"
        android:text="@string/skip"
        android:textSize="28dp"
        android:textAlignment="center"/>


    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerInParent="true"
        android:src="@drawable/three"/>


    <TextView
        android:id="@+id/next3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/skip3"
        android:layout_alignBottom="@+id/skip3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:clickable="true"
        android:text="@string/finish"
        android:textSize="28dp"
        android:textAlignment="center"/>

</RelativeLayout>