<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/username"
            android:textSize="17dp" />

        <EditText
            android:textColor="@color/blueLightText"
            android:id="@+id/editTextUser"
            android:layout_width="280dp"
            android:layout_height="wrap_content" />

        <TextView
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="17dp" />

        <EditText
            android:textColor="@color/blueLightText"
            android:id="@+id/editTextPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/loginButton"
            android:backgroundTint="@color/blueLight"
            android:textColor="@color/white"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/login_Button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="oppure"
            android:textColor="@color/textUnderButton"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Crea un Account"
            android:textColor="@color/blueLight"
            android:textSize="22dp"
            android:clickable="true"
            android:gravity="center"/>









    </LinearLayout>


</RelativeLayout>